Travis: try to get ansible branch working

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,7 @@ script: bundle exec rake test
 #    secure: b+ao+3BuBtM5nj/m1gP5AbrrTIdQiV/HkT1deXvY4gg5xZQDheDeLmOI7wSFP1o67BrwrAY7rpcwIP7S/99fudrU3rKI3+GLn8KoefdAv78Z4tsMs9rodJJ3Z3ZmnEdMK2i2+hCLJ1pzZ9Ae3e+GDHsBPkTz4+TNE1lrOPxDIUo=
 jobs:
   include:
-    - echo "${TRAVIS_COMMIT}" > sequelizer.txt
-    - dropbox-deployment
+    - stage: Ping Jigsaw Builder
+      script:
+        - echo "${TRAVIS_COMMIT}" > sequelizer.txt
+        - dropbox-deployment
