fix: mount user's gitconfig from host

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,7 @@
     "type=bind,source=${localEnv:HOME}/.claude,target=/tmp/host-claude,readonly",
     "type=bind,source=${localEnv:HOME}/.config/claude,target=/tmp/host-claude-config,readonly",
     "type=bind,source=${localEnv:HOME}/.claude.json,target=/tmp/host-claude.json,readonly",
+    "type=bind,source=${localEnv:HOME}/.gitconfig,target=/home/rubydev/.gitconfig,readonly",
     "source=ruby-command-history,target=/commandhistory,type=volume"
   ],
   "postCreateCommand": "/usr/local/bin/setup-credentials.sh && /usr/local/bin/copy-claude-credentials.sh",
